--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
                         <h2 class="section-title">About Me</h2>
                     </div>
                     <div class="about-grid">
-                        <div class="about-image" data-scroll>
+                        <!-- <div class="about-image" data-scroll>
                             <div class="image-wrapper">
                                 <img src="https://customer-assets.emergentagent.com/job_nagavignesh/artifacts/6aqd8vp8_image.png" alt="Naga Vignesh Marneni">
                                 <div class="image-border"></div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="about-content" data-scroll>
                             <p class="about-text">
                                 I am a technically motivated professional with hands-on experience in networking, cybersecurity fundamentals, and systems support. My background includes working in telecom provisioning environments where uptime, accuracy, and rapid incident resolution were critical.
